Updated the contributors list.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,1 @@
-* Arto Bendiken <arto.bendiken@gmail.com>
-* Brendon Murphy <disposable.20.xternal@spamourmet.com>
+* Arto Bendiken <arto@bendiken.net>
